--- a/main.html
+++ b/main.html
@@ -8,7 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>What is the capital of india</h1>
+	<div>
+	<input type="radio" name ="new" value="New Delhi">New Delhi
+   </div>
+	<div>
+		<input type="radio" name ="mumbai" value="Mumbai">Mumbai
+	</div>
+	<p alt="cite"> New Delhi is the capital of India and an administrative district of NCT Delhi."</p>
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
