--- a/main.html
+++ b/main.html
@@ -8,15 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>What is the capital of india</h1>
-	<div>
-	<input type="radio" name ="new" value="New Delhi">New Delhi
-   </div>
-	<div>
-		<input type="radio" name ="mumbai" value="Mumbai">Mumbai
+	<h2>What is the captial of India?</h2>
+	<div >
+		<input  type="radio" value="city" name="city">New Delhi
+		<br>
+		<input  type="radio" value="city" name="city">Mumbai
+		
 	</div>
-	<p alt="cite"> New Delhi is the capital of India and an administrative district of NCT Delhi."</p>
-		<script type="text/javascript" src="./script.js">
+
+	<div id="capital">
+		<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+  <p>
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
+  </p>
+		</blockquote>
+	</div>
+    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
